# quircs_wasm

./: .gitignore  Cargo.toml  LICENSE  bundle.js  index.html  quircs_wasm_bg.wasm  readme.md
.github/workflows/: ci.yml  deploy.yml
example/: .gitignore  build.js  index.tsx  package-lock.json  package.json  readme.md
src/: lib.rs  types.rs
